--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "es6-promise": "^4.2.4",
     "gatsby": "^1.9.277",
     "gatsby-link": "^1.6.46",
     "gatsby-plugin-catch-links": "^1.0.19",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-source-filesystem": "^1.5.29",
     "gatsby-transformer-remark": "^1.7.39",
+    "isomorphic-fetch": "^2.2.1",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
