--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "gatsby-source-filesystem": "^1.5.29",
     "gatsby-transformer-remark": "^1.7.39",
     "isomorphic-fetch": "^2.2.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-table": "^6.8.6"
   },
   "keywords": [
     "gatsby"
